# sdl-rust-ui

./: Cargo.toml  LICENSE.txt  README.md
examples/: 0_layout.rs  1_texture.rs  2_border.rs  3_label.rs  4_focus.rs  5_scroller.rs  6_text_input.rs  7_multi_window.rs  demo.rs
examples/assets/: README.md
examples/example_common/: fancy_surface.rs  gui_loop.rs  mod.rs  sdl_util.rs
src/: lib.rs
src/layout/: clipper.rs  horizontal_layout.rs  mod.rs  scroller.rs  stacked_layout.rs  vertical_layout.rs
src/util/: audio.rs  focus.rs  font.rs  length.rs  mod.rs  rect.rs  render.rs  rust.rs  shuffle.rs
src/widget/: background.rs  border.rs  button.rs  checkbox.rs  debug.rs  label.rs  mod.rs  multi_line_label.rs  single_line_label.rs  single_line_text_input.rs  strut.rs  texture.rs  widget.rs
